--- a/school/elec_302/lab_06/tex/report.tex
+++ b/school/elec_302/lab_06/tex/report.tex
@@ -30,15 +30,17 @@
 
 \section*{Abstract}
 
-In this experiment, the operating characteristics of a separately excited dc motor were analyzed. 
-This report highlights two parts: the investigation of the relationship between motor torque and 
-armature current, and the investigation of dc motor saturation effects. The procedure to determine
-the motor torque and armature current relationship consisted of increasing the dynanometer load torque
-while keeping the voltage supply constant at 116.5-V. A set of data containing the load torque and 
-the armature current were recorded and analyzed. The procedure to determine the dc motor saturation 
-effects consisted of using the field control rheostat to increase the field current while keeping the 
-armature current constant at 1.5-A. A set of data containing the output torque and field current were 
-recorded and analyzed.
+In this experiment, the operating characteristics of a separately excited DC
+motor were analyzed.  This report highlights two parts: the investigation of
+the relationship between motor torque and armature current, and the
+investigation of DC motor saturation effects. The procedure to determine the
+motor torque and armature current relationship consisted of increasing the
+dynanometer load torque while keeping the voltage supply constant at 116.5-V. A
+set of data containing the load torque and the armature current were recorded
+and analyzed. The procedure to determine the DC motor saturation effects
+consisted of using the field control rheostat to increase the field current
+while keeping the armature current constant at 1.5-A. A set of data containing
+the output torque and field current were recorded and analyzed.
 
 \section*{Results}
 
@@ -59,19 +61,25 @@ recorded and analyzed.
 
 \section*{Conclusions}
 
-In Figure~\ref{fig:plot4}, the linear relationship between dc motor speed $n_m$ and torque \tau is exemplified.
-The dc motor was initially operating at approximately 1500 rpm. As the load torque was increased, the
-dc motor experienced a decrease in speed. The armature current was also increasing while the load torque
-was increasing, and thus the internal genearated voltage $E_A$ was decreased.
+In Figure~\ref{fig:plot4}, the linear relationship between DC motor speed $n_m$
+and torque $\tau$ is exemplified.  The DC motor was initially operating at
+approximately 1500-rpm. As the load torque was increased, the DC motor
+experienced a decrease in speed. The armature current was also increasing while
+the load torque was increasing, and thus the internal generated voltage $E_A$
+was decreased.
 
-In Figure~\ref{fig:plot5}, the dc motor saturation effects are shown. This plot is similar to a dc motor
-magnetization curve, where the field current is plotted against the internal voltage. Here, the field current was
-plotted against the output torque. Since the torque in any real machine depends on the flux in the machine, 
-and the internal voltage $E_A$ is directly proportional to the flux produced, the y-axis in Figure~\ref{fig:plot5}
-can be represented by torque and not $E_A$ as in a dc machine magnetization curve. This plot shows that initially
-a large increase in field current correlates to a sharp increase in output torque. Initially the dynamometer load
-torque was set to its max value. Thus as the dc motor output torque nears this max dynamometer load torque, 
-further increases in field current produce less and less increases in output torque.
+In Figure~\ref{fig:plot5}, the DC motor saturation effects are shown. This plot
+is similar to a DC motor magnetization curve, where the field current is
+plotted against the internal voltage. Here, the field current was plotted
+against the output torque. Since the torque in any real machine depends on the
+flux in the machine, and the internal voltage $E_A$ is directly proportional to
+the flux produced, the y-axis in Figure~\ref{fig:plot5} can be represented by
+torque and not $E_A$ as in a DC machine magnetization curve. This plot shows
+that initially a large increase in field current correlates to a sharp increase
+in output torque. Initially the dynanometer load torque was set to its max
+value. Thus as the DC motor output torque nears this max dynanometer load
+torque, further increases in field current produce less and less increases in
+output torque.
 
 
 \end{document}
