Changing plot caption/size

--- a/school/elec_302/lab_07/tex/report.tex
+++ b/school/elec_302/lab_07/tex/report.tex
@@ -27,8 +27,9 @@ relationship was examined.
 
 \begin{figure}[H]
   \centering
-    \includegraphics[width=0.6\textwidth]{img/graph}
-    \caption{\textbf{Comparison of Speed vs. Torque Plots}}
+    \includegraphics[width=0.7\textwidth]{img/graph}
+    \caption{\textbf{Comparison of Torque-Speed relationships for each
+    construction}}
     \label{fig:graph}
 \end{figure}
 
