--- a/school/elec_302/lab_07/tex/report.tex
+++ b/school/elec_302/lab_07/tex/report.tex
@@ -20,14 +20,16 @@
 
 \section*{Abstract}
 
-In this experiment, the effect of a motor's construction on the torque-speed
-relationship was examined.
+In this experiment, the effect of a DC motor's construction on its torque-speed
+relationship (also referred to as its terminal characteristics) was examined.
+The three connection types examined here are: series-connected,
+shunt-connected, and compound-connected (a combination of the two).
 
 \section*{Results}
 
 \begin{figure}[H]
   \centering
-    \includegraphics[width=0.7\textwidth]{img/graph}
+    \includegraphics[width=0.8\textwidth]{img/graph}
     \caption{\textbf{Comparison of Torque-Speed relationships for each
     construction}}
     \label{fig:graph}
@@ -36,25 +38,17 @@ relationship was examined.
 \section*{Conclusions}
 
 The torque-speed relationship, or terminal characteristics, of the shunt motor
-resembles a straight line. In fact, the equation for a shunt motor’s speed vs\.
-torque is a linear relationship with a negative slope. The terminal
-characteristics of a series motor have a nonlinear relationship. It is noted
-that as the torque on a series motor goes to zero, its speed goes to infinity.
-However, the torque on a motor can never go to zero because of the mechanical,
-core, and stray losses that must be overcome. Just as well, the speed of a
-series motor can still turn fast enough to damage itself. The terminal
-characteristics of a cumulatively compounded motor resemble both a series and a
-shunt motor. This is because the compounded motor contains both a shunt and a
-series field. Although the resemblance is hard to discern from Figure 1, if
-more data was obtained, then at low torque, the compounded motor would most
-resemble a shunt motor.  At higher torque the compounded motor would most
-resemble a series motor.
-
-%In Figure~\ref{fig:graph}, the linear relationship between DC motor speed
-%$n_m$ and torque $\tau$ is exemplified.  The DC motor was initially operating
-%at approximately 1500-rpm.  As the load torque was increased, the DC motor
-%experienced a decrease in speed.  The armature current was also increasing
-%while the load torque was increasing, and thus the internal generated voltage
-%$E_A$ was decreased.
+resembles a straight line. In fact, the equation for a shunt motor’s
+torque-speed relationship is linear, with a negative slope. The terminal
+characteristics of a series motor are nonlinear. It is noted that as the torque
+on a series motor goes to zero, its speed goes to infinity.  However, the
+torque on a motor can never go to zero because of the mechanical, core, and
+stray losses that must be overcome. Just as well, the speed of a series motor
+can still turn fast enough to damage itself. The terminal characteristics of a
+cumulatively compounded motor resemble both a series and a shunt motor. This is
+because the compounded motor contains both a shunt and a series field. Although
+the resemblance is hard to discern from Figure~\ref{fig:graph}, if more data
+was obtained, it would be apparent that the motor resembles a shunt motor at
+low torques, and a series motor at higher torque.
 
 \end{document}
