First run of report.

--- a/school/elec_302/lab_08/tex/report.tex
+++ b/school/elec_302/lab_08/tex/report.tex
@@ -10,8 +10,8 @@
 \begin{document}
 
 \begin{tabular}{rl}
-  \textbf{Lab 7:} & DC Motor Configurations \\
-  \textbf{Performed:} & March 11, 2013 \\
+  \textbf{Lab 8:} & DC Generators \\
+  \textbf{Performed:} & March 26, 2013 \\
   \textbf{Partners:} & Rawley Dent \\ & Charles Pittman \\
   \textbf{Instructor:} & Dr. Weatherford
 \end{tabular}
@@ -30,8 +30,7 @@ shunt-connected, and compound-connected (a combination of the two).
 \begin{figure}[H]
   \centering
     \includegraphics[width=0.8\textwidth]{img/graph}
-    \caption{\textbf{Comparison of Torque-Speed relationships for each
-    construction}}
+    \caption{\textbf{Comparison}}
     \label{fig:graph}
 \end{figure}
 
