--- a/school/elec_302/lab_08/tex/report.tex
+++ b/school/elec_302/lab_08/tex/report.tex
@@ -20,10 +20,13 @@
 
 \section*{Abstract}
 
-In this experiment, the effect of a DC motor's construction on its torque-speed
-relationship (also referred to as its terminal characteristics) was examined.
-The three connection types examined here are: series-connected,
-shunt-connected, and compound-connected (a combination of the two).
+In this experiment, the basic principles of operation of DC generators were studied. A seperately excited 
+DC generator was setup and its magnetization curve was created for a no-load scenario and for a loaded 
+scenario with 100 \Omega. Then, the output voltage and output current relationship for a separately excited
+generator was studied with various loads, from no-load down to 57 \Omega. A shunt connected DC genearator was
+then constructed and its output voltage and output current relationship was studied with the same types of 
+loads. A compound connected DC generator was then constructed and its output voltage and output current 
+relationship was studied with the same types of loads as used with the shunt connected and separately excited.
 
 \section*{Results}
 
@@ -36,18 +39,15 @@ shunt-connected, and compound-connected (a combination of the two).
 
 \section*{Conclusions}
 
-The torque-speed relationship, or terminal characteristics, of the shunt motor
-resembles a straight line. In fact, the equation for a shunt motor’s
-torque-speed relationship is linear, with a negative slope. The terminal
-characteristics of a series motor are nonlinear. It is noted that as the torque
-on a series motor goes to zero, its speed goes to infinity.  However, the
-torque on a motor can never go to zero because of the mechanical, core, and
-stray losses that must be overcome. Just as well, the speed of a series motor
-can still turn fast enough to damage itself. The terminal characteristics of a
-cumulatively compounded motor resemble both a series and a shunt motor. This is
-because the compounded motor contains both a shunt and a series field. Although
-the resemblance is hard to discern from Figure~\ref{fig:graph}, if more data
-was obtained, it would be apparent that the motor resembles a shunt motor at
-low torques, and a series motor at higher torque.
-
+For DC motors, the teminal characteristics are induced torque and motor speed. However, for DC generators the 
+terminal characteristics are terminal voltage and line current, that is the output voltage and output current. 
+In the figure above the terminal characteristics of a separately excited, shunt connected, and compound connected
+DC generator are compared. In the plot of the terminal characteristics of a separately excited generator, it can 
+be seen to be a straight line. As the load was increased in the experiment, the line current and thus the armature
+current increased. From Kirchoff's voltage law $V_T = E_A - I_A*R_A$ the terminal voltage will thus decrease as
+line current increases, and in a linearly fashion since the internal generated voltage $E_A$ is independent of the 
+armature current $I_A$. The terminal characteristics of a shunt connected generator are similar to that of a 
+separately excited generator. However, since the amount of field current depends of the terminal voltgae as the 
+terminal voltage decreases then so does the field current. This causes the flux to decrease which then causes the 
+internal genearated voltage $E_A$ to decrease and thus the terminal voltage decreases even more. 
 \end{document}
