Adding results from experiment.

--- a/school/elec_302/lab_09/tex/report.tex
+++ b/school/elec_302/lab_09/tex/report.tex
@@ -10,8 +10,8 @@
 \begin{document}
 
 \begin{tabular}{rl}
-  \textbf{Lab 8:} & DC Generators \\
-  \textbf{Performed:} & March 26, 2013 \\
+  \textbf{Lab 8:} & Three Phase Induction Motor\\
+  \textbf{Performed:} & April 01, 2013 \\
   \textbf{Partners:} & Rawley Dent \\ & Charles Pittman \\
   \textbf{Instructor:} & Dr. Weatherford
 \end{tabular}
