--- a/school/elec_302/paper/paper.tex
+++ b/school/elec_302/paper/paper.tex
@@ -20,7 +20,7 @@
   % This could probably do with some reorganizing, if I have time.
 
   \section*{Introduction}
-  The study of electronics generally begins with exloring the function and
+  The study of electronics generally begins with exploring the function and
   operation of \ac{DC} circuits, with skills learned then translated for
   \ac{AC} circuits.  In that translation some students tend to focus more on
   applying the formulas in problem solving, losing sight of how they were
@@ -46,17 +46,21 @@
 
   \section*{How is \ac{AC} Generated?}
   Figure~\ref{alternator} shows a simple model of a three-phase alternator,
-  consisting of a magnetic rotar and stator with three separate sets of coil
+  consisting of a magnetic rotor and stator with three separate sets of coil
   windings mounted 120$^\circ$ from each other.  In accordance with Faraday's
   law of induction, an \ac{EMF} is created in the conductors as the magnetic
   field rotates with the shaft, with each set of windings as a separate phase.
 
   Not surprisingly, most values used in solving \ac{AC} circuits describe the
   characteristics of the alternator.  The period previously mentioned is one
-  revolution of the rotar, so the frequency of the \ac{AC} waveform produced is
+  revolution of the rotor, so the frequency of the \ac{AC} waveform produced is
   the number of revolutions per second.
 
-  \section*{What is Complex Power?}
+%  \section*{What is Complex Power?}
+%	Impedance, the opposition of current in a circuit, is extended in \ac{AC}.
+%	The fields in capacitors and inductors continued to grow in \ac{DC} circuits
+%	until they stopped current and voltage, respectively.  Those fields are
+%	discharged when the current flow reverses
 
   \begin{figure}[p]
     \centering
@@ -74,10 +78,10 @@
     \label{alternator}
   \end{figure}
 
-  \begin{figure}[p]
-    \centering
-    \includegraphics[width=0.6\textwidth]{complexpwr}
-    \caption{Complex Power Triangle}
-    \label{complexpwr}
-  \end{figure}
+%  \begin{figure}[p]
+%    \centering
+%    \includegraphics[width=0.6\textwidth]{complexpwr}
+%    \caption{Complex Power Triangle}
+%    \label{complexpwr}
+%  \end{figure}
 \end{document}
